<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent" android:layout_height="match_parent">


    <Button
        android:id="@+id/btn_cover_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="13dp"
        android:onClick="showCover"
        android:text="@string/cover"
        />

    <Button
        android:id="@+id/btn_intro_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btn_cover_id"
        android:layout_alignStart="@+id/btn_cover_id"
        android:layout_below="@+id/btn_cover_id"
        android:onClick="showPreface"
        android:text="@string/intro" />

    <Button
        android:id="@+id/btn_ch01_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btn_intro_id"
        android:layout_alignStart="@+id/btn_intro_id"
        android:layout_below="@+id/btn_intro_id"
        android:onClick="showCh01"
        android:text="@string/ch01" />

    <Button
        android:id="@+id/btn_ch02_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btn_ch01_id"
        android:layout_alignStart="@+id/btn_ch01_id"
        android:layout_below="@+id/btn_ch01_id"
        android:onClick="showCh02"
        android:text="@string/ch02" />

    <Button
        android:id="@+id/btn_ch03_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btn_ch02_id"
        android:layout_alignStart="@+id/btn_ch02_id"
        android:layout_below="@+id/btn_ch02_id"
        android:onClick="showCh03"
        android:text="@string/ch03" />

    <Button
        android:id="@+id/btn_ch04_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btn_ch03_id"
        android:layout_alignStart="@+id/btn_ch03_id"
        android:layout_below="@+id/btn_ch03_id"
        android:onClick="showCh04"
        android:text="@string/ch04" />

    <Button
        android:id="@+id/btn_ch05_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btn_ch04_id"
        android:layout_alignStart="@+id/btn_ch04_id"
        android:layout_below="@+id/btn_ch04_id"
        android:onClick="showCh05"
        android:text="@string/ch05" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_about_me_id"
        android:layout_alignStart="@+id/btn_ch05_id"
        android:layout_alignLeft="@+id/btn_ch05_id"
        android:layout_below="@+id/btn_ch05_id"
        android:text="@string/about_me"
        android:onClick="showAboutMe"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_about_app_id"
        android:layout_alignStart="@+id/btn_about_me_id"
        android:layout_alignLeft="@+id/btn_about_me_id"
        android:layout_below="@+id/btn_about_me_id"
        android:text="@string/about_app"
        android:onClick="showAboutApp"/>






</RelativeLayout>